# stencilpal

./: .gitignore  .pre-commit-config.yaml  README.md  example.ipynb  fractions.ipynb  main.ipynb  noxfile.py  poly.ipynb  pyproject.toml  rational_array.ipynb  stencils.ipynb
.github/workflows/: ci.yml
stencilpal/: __init__.py  math_utils.py  polynomial.py  rational.py  stencil.py
tests/: test_FractionArray.py  test_Polynomial.py  test_fv.py  test_rational.py  test_rational_stencils.py  test_stencil.py
